# driftwatch-agent

./: .gitignore  Cargo.toml  README.md  build.rs  deny.toml
.github/workflows/: benchmarks.yml  build.yml  coverage.yml  lint.yml  release-integrity.yml  security.yml  test.yml
benches/: geo_benches.rs  network_benches.rs  scoring_benches.rs  telemetry_benches.rs
config/: default.toml
install/linux/: riskagent.service
install/macos/: LaunchAgent.plist
install/windows/: install.ps1
src/: config.rs  keychain.rs  lib.rs  main.rs  telemetry.rs
src/ipc/: mod.rs  unix.rs  windows_pipe.rs
src/platform/: linux.rs  macos.rs  mod.rs  stub.rs  windows.rs
src/scoring/: device_quantity.rs  geo_anchor.rs  mod.rs  network_risk.rs
tests/: platform_geo_smoke.rs  scoring_tests.rs
