[package]
name = "driftwatch-agent"
version = "0.1.0"
edition = "2021"
description = "Cross-platform device risk scoring agent"
license = "Apache-2.0"

[lib]
name = "driftwatch_agent"
path = "src/lib.rs"

[[bin]]
name = "driftwatch-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
getrandom = "0.2"
hex = "0.4"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
tokio-stream = "0.1"
keyring = "3"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-core-location = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Devices_Geolocation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Services",
] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4", default-features = false, features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "scoring_benches"
harness = false

[[bench]]
name = "geo_benches"
harness = false

[[bench]]
name = "network_benches"
harness = false

[[bench]]
name = "telemetry_benches"
harness = false